# Weekly1

./: CMakeLists.txt  README.md  Weekly1.sln
SharedLibs/: SharedLib.lib
Task1/: CMakeLists.txt  Task1.cpp  Task1.vcxproj  Task1.vcxproj.filters
Task2/: CMakeLists.txt  Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters
Task3/: CMakeLists.txt  Task3.cpp  Task3.vcxproj  Task3.vcxproj.filters
Task4/: CMakeLists.txt  Task4.cpp  Task4.vcxproj  Task4.vcxproj.filters
Task5/: CMakeLists.txt  Task5.cpp  Task5.vcxproj  Task5.vcxproj.filters
Weekly1/: CMakeLists.txt  ErrorCodes.h  Helpers.h  Person.cpp  Person.h  Task1.cpp  Weekly1.cpp  Weekly1.vcxproj  Weekly1.vcxproj.filters
